--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 
-buildscript {
-  repositories {
+repositories {
 	mavenCentral()
-  }
-  dependencies {
-    classpath 'mysql:mysql-connector-java:5.1.21'
-  }
+}
+dependencies {
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+}
+test {
+	include 'test/**'
 }
