--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ repositories {
 }
 dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
+	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 test {
