--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+	compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 test {
