--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 	compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile 'junit:junit:[4,)'
 }
 test {
-	include 'test/**'
+	    testLogging {
+        // Show that tests are run in the command-line output
+        events 'started', 'passed'
+    }
 }
 war{
  archiveName = 'ROOT.war'
