--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 /target/
-target
-.settings/*
-!.settings/.jsdtscope
-.project
-.classpath
 .gradle/*
 /bin/
 .project
 .classpath
 .settings
 .DS_Store
+/build/
+/webapps/
