--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ apply plugin: 'eclipse-wtp'
 repositories {
 	mavenCentral()
 }
+tasks.withType(JavaCompile) {
+    sourceCompatibility = '1.7'
+    targetCompatibility = '1.7'
+}
 dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
