--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'war'
-apply plugin: 'jetty'
 apply plugin: 'eclipse-wtp'
 
 repositories {
@@ -10,6 +9,11 @@ tasks.withType(JavaCompile) {
     sourceCompatibility = '1.7'
     targetCompatibility = '1.7'
 }
+sourceSets {
+  main {
+    output.classesDir   = 'WebContent/WEB-INF/classes'
+  }
+}
 dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
@@ -17,7 +21,7 @@ dependencies {
     testCompile 'junit:junit:[4,)'
 }
 test {
-	    testLogging {
+	testLogging {
         // Show that tests are run in the command-line output
         events 'started', 'passed'
     }
@@ -26,4 +30,3 @@ war{
  archiveName = 'ROOT.war'
  destinationDir = file('webapps')
 }
-jettyRunWar.contextPath = '' 
