--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
 	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 	compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
-    testCompile 'junit:junit:[4,)'
+    	testCompile 'junit:junit:[4,)'
 }
 test {
 	testLogging {
@@ -27,6 +27,8 @@ test {
     }
 }
 war{
+ webAppDirName = 'WebContent'
+ webXml = file('WebContent/WEB-INF/web.xml')
  archiveName = 'ROOT.war'
  destinationDir = file('webapps')
 }
