--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ sourceSets {
   }
 }
 dependencies {
-	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
-	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-	compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
-    	testCompile 'junit:junit:[4,)'
+	compile fileTree(dir: 'WebContent/WEB-INF/lib', include: ['*.jar'])
+	//compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
+	//compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+	//compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+	//compile group: 'org.seleniumhq.selenium', name: 'selenium-server-standalone', version: '2.53.0'
+    testCompile 'junit:junit:[4,)'
 }
 test {
 	testLogging {
