--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,13 @@ dependencies {
 	//compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 	//compile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
 	//compile group: 'org.seleniumhq.selenium', name: 'selenium-server-standalone', version: '2.53.0'
-    testCompile 'junit:junit:[4,)'
+   	testCompile 'junit:junit:[4,)'
 }
 test {
+	exclude 'tests/GUITest.class'
 	testLogging {
-        // Show that tests are run in the command-line output
-        events 'started', 'passed'
-    }
+        	events "PASSED", "STARTED", "FAILED", "SKIPPED"
+    	}
 }
 war{
  webAppDirName = 'WebContent'
